# AI-Based-Online-Proctoring-Exam-System

./: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  schema_capstone.sql  vercel.json
backend/: .env  Dockerfile  app.py  config.py  models.py  proctoring.py  pyproject.toml  requirements.txt  seed.py
backend/instance/: database.db
public/: index.html
src/: App.js  Data.js  api.js  index.js  theme.js
src/components/: LoginPage.js  SignUpPage.js
src/layouts/: AdminLayout.js  StudentLayout.js
src/pages/admin/: AdminDashboard.js  AdminExamList.js  ExamForm.js  ExamResultAdm.js  UserListPage.js  UserManagement.js
src/pages/student/: ExamSubmittedPage.js  ExamTakingInterface.js  StudentAvailableExams.js  StudentDashboard.js  StudentProfile.js
